Use java 8 compliant Arrays.asList